Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -86,5 +86,6 @@
   "mn82:12.3": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ ",
   "mn82:13.1": "Und Raṭṭhapāla erhielt vor dem Buddha die Weihe des Fortziehens, die Ordination. ",
   "mn82:13.2": "Nicht lange nach der Ordination des Ehrwürdigen Raṭṭhapāla, einen halben Monat später, brach der Buddha, nachdem er so lange in Thullakoṭṭhita geblieben war, wie es ihm gefiel, nach Sāvatthī auf. ",
-  "mn82:13.3": "Er wanderte Stück für Stück, bis er nach Sāvatthī kam, "
+  "mn82:13.3": "Er wanderte Stück für Stück, bis er nach Sāvatthī kam, ",
+  "mn82:13.4": "und blieb dort in Jetas Wäldchen, dem Kloster des Anāthapiṇḍika. "
 }
