--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "mn82:13.2": "Nicht lange nach der Ordination des Ehrwürdigen Raṭṭhapāla, einen halben Monat später, brach der Buddha, nachdem er so lange in Thullakoṭṭhita geblieben war, wie es ihm gefiel, nach Sāvatthī auf. ",
   "mn82:13.3": "Er wanderte Stück für Stück, bis er nach Sāvatthī kam, ",
   "mn82:13.4": "und blieb dort in Jetas Wäldchen, dem Kloster des Anāthapiṇḍika. ",
-  "mn82:14.1": "Da gelangte der Ehrwürdige Raṭṭhapāla, als er allein lebte, zurückgezogen, beflissen, eifrig und entschlossen, bald in diesem Leben zum äußersten Höhepunkt des geistlichen Lebens. Er lebte an dem Ziel, das er durch eigene Einsicht erkannt hatte, für welches ehrbare Menschen zu Recht aus dem Haus fortziehen ins hauslose Leben. "
+  "mn82:14.1": "Da gelangte der Ehrwürdige Raṭṭhapāla, als er allein lebte, zurückgezogen, beflissen, eifrig und entschlossen, bald in diesem Leben zum äußersten Höhepunkt des geistlichen Lebens. Er lebte an dem Ziel, das er durch eigene Einsicht erkannt hatte, für welches ehrbare Menschen zu Recht aus dem Haus fortziehen ins hauslose Leben. ",
+  "mn82:14.2": "Er verstand: „Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.“ "
 }
