Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -92,5 +92,6 @@
   "mn82:14.2": "Er verstand: „Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.“ ",
   "mn82:14.3": "Und der Ehrwürdige Raṭṭhapāla wurde einer der Vollendeten. ",
   "mn82:15.1": "Dann ging Raṭṭhapāla zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "mn82:15.2": "„Herr, wenn der Buddha es erlaubt, will ich meine Eltern besuchen.“ "
+  "mn82:15.2": "„Herr, wenn der Buddha es erlaubt, will ich meine Eltern besuchen.“ ",
+  "mn82:15.3": "Darauf richtete der Buddha den Geist darauf, Raṭṭhapālas Geist zu erfassen. "
 }
