Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "mn82:15.1": "Dann ging Raṭṭhapāla zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "mn82:15.2": "„Herr, wenn der Buddha es erlaubt, will ich meine Eltern besuchen.“ ",
   "mn82:15.3": "Darauf richtete der Buddha den Geist darauf, Raṭṭhapālas Geist zu erfassen. ",
-  "mn82:15.4": "Als er erkannte, "
+  "mn82:15.4": "Als er erkannte, ",
+  "mn82:15.5": "dass es unmöglich war, dass Raṭṭhapāla die Schulung abbrechen und sich wieder einem geringeren Leben zuwenden könnte, sagte er: "
 }
