--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -96,5 +96,6 @@
   "mn82:15.3": "Darauf richtete der Buddha den Geist darauf, Raṭṭhapālas Geist zu erfassen. ",
   "mn82:15.4": "Als er erkannte, ",
   "mn82:15.5": "dass es unmöglich war, dass Raṭṭhapāla die Schulung abbrechen und sich wieder einem geringeren Leben zuwenden könnte, sagte er: ",
-  "mn82:15.6": "„Bitte, Raṭṭhapāla, geh nach deinem Belieben.“ "
+  "mn82:15.6": "„Bitte, Raṭṭhapāla, geh nach deinem Belieben.“ ",
+  "mn82:16.1": "Da erhob sich Raṭṭhapāla von seinem Sitz, verbeugte sich und umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt. Dann brachte er seine Unterkunft in Ordnung, nahm Schale und Robe und brach nach Thullakoṭṭhita auf. "
 }
