--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -100,5 +100,6 @@
   "mn82:16.1": "Da erhob sich Raṭṭhapāla von seinem Sitz, verbeugte sich und umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt. Dann brachte er seine Unterkunft in Ordnung, nahm Schale und Robe und brach nach Thullakoṭṭhita auf. ",
   "mn82:16.2": "Er wanderte Stück für Stück, bis er nach Thullakoṭṭhita kam, ",
   "mn82:16.3": "und blieb dort im Wildgehege des Königs Koravya. ",
-  "mn82:16.4": "Da kleidete sich der ehrwürdige Raṭṭhapāla am Morgen an, nahm Schale und Robe und betrat Thullakoṭṭhita zum Almosengang. "
+  "mn82:16.4": "Da kleidete sich der ehrwürdige Raṭṭhapāla am Morgen an, nahm Schale und Robe und betrat Thullakoṭṭhita zum Almosengang. ",
+  "mn82:16.5": "Als er der Reihe nach um Almosen durch Thullakoṭṭhita zog, kam er zum Haus seines eigenen Vaters. "
 }
