--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -101,5 +101,6 @@
   "mn82:16.2": "Er wanderte Stück für Stück, bis er nach Thullakoṭṭhita kam, ",
   "mn82:16.3": "und blieb dort im Wildgehege des Königs Koravya. ",
   "mn82:16.4": "Da kleidete sich der ehrwürdige Raṭṭhapāla am Morgen an, nahm Schale und Robe und betrat Thullakoṭṭhita zum Almosengang. ",
-  "mn82:16.5": "Als er der Reihe nach um Almosen durch Thullakoṭṭhita zog, kam er zum Haus seines eigenen Vaters. "
+  "mn82:16.5": "Als er der Reihe nach um Almosen durch Thullakoṭṭhita zog, kam er zum Haus seines eigenen Vaters. ",
+  "mn82:17.1": "Zu dieser Zeit wurden Raṭṭhapālas Vater in der mittleren Torhalle die Haare frisiert. "
 }
