--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -104,5 +104,6 @@
   "mn82:16.5": "Als er der Reihe nach um Almosen durch Thullakoṭṭhita zog, kam er zum Haus seines eigenen Vaters. ",
   "mn82:17.1": "Zu dieser Zeit wurden Raṭṭhapālas Vater in der mittleren Torhalle die Haare frisiert. ",
   "mn82:17.2": "Er sah Raṭṭhapāla von Weitem kommen ",
-  "mn82:17.3": "und sagte: "
+  "mn82:17.3": "und sagte: ",
+  "mn82:17.4": "„Unser lieber und teurer Sohn wurde von diesen glatzköpfigen Pfaffen, diesen falschen Asketen, zum Fortziehen gebracht!“ "
 }
