--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -106,5 +106,6 @@
   "mn82:17.2": "Er sah Raṭṭhapāla von Weitem kommen ",
   "mn82:17.3": "und sagte: ",
   "mn82:17.4": "„Unser lieber und teurer Sohn wurde von diesen glatzköpfigen Pfaffen, diesen falschen Asketen, zum Fortziehen gebracht!“ ",
-  "mn82:17.5": "Und beim Haus seines eigenen Vaters erhielt Raṭṭhapāla weder Almosen noch eine höfliche Ablehnung, "
+  "mn82:17.5": "Und beim Haus seines eigenen Vaters erhielt Raṭṭhapāla weder Almosen noch eine höfliche Ablehnung, ",
+  "mn82:17.6": "sondern nur Beschimpfung. "
 }
