Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -108,5 +108,6 @@
   "mn82:17.4": "„Unser lieber und teurer Sohn wurde von diesen glatzköpfigen Pfaffen, diesen falschen Asketen, zum Fortziehen gebracht!“ ",
   "mn82:17.5": "Und beim Haus seines eigenen Vaters erhielt Raṭṭhapāla weder Almosen noch eine höfliche Ablehnung, ",
   "mn82:17.6": "sondern nur Beschimpfung. ",
-  "mn82:18.1": "Zu dieser Zeit wollte eine abhängige Dienerin der Familie den Brei vom Vorabend wegwerfen. "
+  "mn82:18.1": "Zu dieser Zeit wollte eine abhängige Dienerin der Familie den Brei vom Vorabend wegwerfen. ",
+  "mn82:18.2": "Da sagte Raṭṭhapāla zu ihr: "
 }
