Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "mn82:17.5": "Und beim Haus seines eigenen Vaters erhielt Raṭṭhapāla weder Almosen noch eine höfliche Ablehnung, ",
   "mn82:17.6": "sondern nur Beschimpfung. ",
   "mn82:18.1": "Zu dieser Zeit wollte eine abhängige Dienerin der Familie den Brei vom Vorabend wegwerfen. ",
-  "mn82:18.2": "Da sagte Raṭṭhapāla zu ihr: "
+  "mn82:18.2": "Da sagte Raṭṭhapāla zu ihr: ",
+  "mn82:18.3": "„Wenn das weggeworfen werden soll, Schwester, so gieße es hier in meine Schale.“ "
 }
