Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -111,5 +111,6 @@
   "mn82:18.1": "Zu dieser Zeit wollte eine abhängige Dienerin der Familie den Brei vom Vorabend wegwerfen. ",
   "mn82:18.2": "Da sagte Raṭṭhapāla zu ihr: ",
   "mn82:18.3": "„Wenn das weggeworfen werden soll, Schwester, so gieße es hier in meine Schale.“ ",
-  "mn82:18.4": "Als sie den Brei in seine Schale goss, erkannte sie die Merkmale seiner Hände und Füße und seiner Stimme. "
+  "mn82:18.4": "Als sie den Brei in seine Schale goss, erkannte sie die Merkmale seiner Hände und Füße und seiner Stimme. ",
+  "mn82:18.5": "Da ging sie zu seiner Mutter und sagte: "
 }
