Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -113,5 +113,6 @@
   "mn82:18.3": "„Wenn das weggeworfen werden soll, Schwester, so gieße es hier in meine Schale.“ ",
   "mn82:18.4": "Als sie den Brei in seine Schale goss, erkannte sie die Merkmale seiner Hände und Füße und seiner Stimme. ",
   "mn82:18.5": "Da ging sie zu seiner Mutter und sagte: ",
-  "mn82:18.6": "„Bitte, meine Dame, das sollst du wissen: "
+  "mn82:18.6": "„Bitte, meine Dame, das sollst du wissen: ",
+  "mn82:18.7": "Meister Raṭṭhapāla ist angekommen.“ "
 }
