--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -115,5 +115,6 @@
   "mn82:18.5": "Da ging sie zu seiner Mutter und sagte: ",
   "mn82:18.6": "„Bitte, meine Dame, das sollst du wissen: ",
   "mn82:18.7": "Meister Raṭṭhapāla ist angekommen.“ ",
-  "mn82:18.8": "„Himmel! Wenn du die Wahrheit sagst, mache ich dich zu einer freien Frau!“ "
+  "mn82:18.8": "„Himmel! Wenn du die Wahrheit sagst, mache ich dich zu einer freien Frau!“ ",
+  "mn82:18.9": "Da ging Raṭṭhapālas Mutter zu seinem Vater und sagte: "
 }
