Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -117,5 +117,6 @@
   "mn82:18.7": "Meister Raṭṭhapāla ist angekommen.“ ",
   "mn82:18.8": "„Himmel! Wenn du die Wahrheit sagst, mache ich dich zu einer freien Frau!“ ",
   "mn82:18.9": "Da ging Raṭṭhapālas Mutter zu seinem Vater und sagte: ",
-  "mn82:18.10": "„Bitte, Hausbesitzer, das sollst du wissen: "
+  "mn82:18.10": "„Bitte, Hausbesitzer, das sollst du wissen: ",
+  "mn82:18.11": "Es scheint, unser Sohn Raṭṭhapāla ist angekommen.“ "
 }
