Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -119,5 +119,6 @@
   "mn82:18.9": "Da ging Raṭṭhapālas Mutter zu seinem Vater und sagte: ",
   "mn82:18.10": "„Bitte, Hausbesitzer, das sollst du wissen: ",
   "mn82:18.11": "Es scheint, unser Sohn Raṭṭhapāla ist angekommen.“ ",
-  "mn82:19.1": "Zu dieser Zeit aß Raṭṭhapāla den Brei vom Vorabend, an eine Mauer gelehnt. "
+  "mn82:19.1": "Zu dieser Zeit aß Raṭṭhapāla den Brei vom Vorabend, an eine Mauer gelehnt. ",
+  "mn82:19.2": "Da ging Raṭṭhapālas Vater zu ihm und sagte: "
 }
