--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -121,5 +121,6 @@
   "mn82:18.11": "Es scheint, unser Sohn Raṭṭhapāla ist angekommen.“ ",
   "mn82:19.1": "Zu dieser Zeit aß Raṭṭhapāla den Brei vom Vorabend, an eine Mauer gelehnt. ",
   "mn82:19.2": "Da ging Raṭṭhapālas Vater zu ihm und sagte: ",
-  "mn82:19.3": "„Lieber Raṭṭhapāla! Da ist … und du isst den Brei vom Vorabend? "
+  "mn82:19.3": "„Lieber Raṭṭhapāla! Da ist … und du isst den Brei vom Vorabend? ",
+  "mn82:19.4": "Warum kommst du nicht in dein eigenes Haus?“ "
 }
