Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -123,5 +123,6 @@
   "mn82:19.2": "Da ging Raṭṭhapālas Vater zu ihm und sagte: ",
   "mn82:19.3": "„Lieber Raṭṭhapāla! Da ist … und du isst den Brei vom Vorabend? ",
   "mn82:19.4": "Warum kommst du nicht in dein eigenes Haus?“ ",
-  "mn82:19.5": "„Hausbesitzer, wie können wir, die wir aus dem Haus fortgezogen sind ins hauslose Leben, ein Haus haben? "
+  "mn82:19.5": "„Hausbesitzer, wie können wir, die wir aus dem Haus fortgezogen sind ins hauslose Leben, ein Haus haben? ",
+  "mn82:19.6": "Wir sind hauslos, Hausbesitzer. "
 }
