Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -125,5 +125,6 @@
   "mn82:19.4": "Warum kommst du nicht in dein eigenes Haus?“ ",
   "mn82:19.5": "„Hausbesitzer, wie können wir, die wir aus dem Haus fortgezogen sind ins hauslose Leben, ein Haus haben? ",
   "mn82:19.6": "Wir sind hauslos, Hausbesitzer. ",
-  "mn82:19.7": "Ich kam zu deinem Haus, aber dort erhielt ich weder Almosen noch eine höfliche Ablehnung, "
+  "mn82:19.7": "Ich kam zu deinem Haus, aber dort erhielt ich weder Almosen noch eine höfliche Ablehnung, ",
+  "mn82:19.8": "sondern nur Beschimpfung.“ "
 }
