Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -127,5 +127,6 @@
   "mn82:19.6": "Wir sind hauslos, Hausbesitzer. ",
   "mn82:19.7": "Ich kam zu deinem Haus, aber dort erhielt ich weder Almosen noch eine höfliche Ablehnung, ",
   "mn82:19.8": "sondern nur Beschimpfung.“ ",
-  "mn82:19.9": "„Komm, lieber Raṭṭhapāla, lass uns ins Haus gehen.“ "
+  "mn82:19.9": "„Komm, lieber Raṭṭhapāla, lass uns ins Haus gehen.“ ",
+  "mn82:19.10": "„Genug, Hausbesitzer. Mein Mahl für heute ist beendet.“ "
 }
