Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -129,5 +129,6 @@
   "mn82:19.8": "sondern nur Beschimpfung.“ ",
   "mn82:19.9": "„Komm, lieber Raṭṭhapāla, lass uns ins Haus gehen.“ ",
   "mn82:19.10": "„Genug, Hausbesitzer. Mein Mahl für heute ist beendet.“ ",
-  "mn82:19.11": "„Nun, Raṭṭhapāla, dann nimm bitte die morgige Mahlzeit von mir an.“ "
+  "mn82:19.11": "„Nun, Raṭṭhapāla, dann nimm bitte die morgige Mahlzeit von mir an.“ ",
+  "mn82:19.12": "Raṭṭhapāla schwieg zum Zeichen der Zustimmung. "
 }
