--- a/translation/en/kelly/sutta/kn/mil/mil3.5.2_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.2_translation-en-kelly.json
@@ -1,5 +1,6 @@
 {
   "mil3.5.2:0.1": "Questions of Milinda ",
   "mil3.5.2:0.2": "Buddha Chapter ",
-  "mil3.5.2:0.3": "Question on the Unsurpassed Nature of the Buddha "
+  "mil3.5.2:0.3": "Question on the Unsurpassed Nature of the Buddha ",
+  "mil3.5.2:3.1": "Question on the Unsurpassed Nature of the Buddha second "
 }
