--- a/translation/en/kelly/sutta/kn/mil/mil3.5.3_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.3_translation-en-kelly.json
@@ -1,4 +1,5 @@
 {
   "mil3.5.3:0.1": "Questions of Milinda ",
-  "mil3.5.3:0.2": "Buddha Chapter "
+  "mil3.5.3:0.2": "Buddha Chapter ",
+  "mil3.5.3:0.3": "Question on Knowing the Unsurpassed Nature of the Buddha "
 }
