Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.4_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.4_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.4_translation-en-kelly.json
@@ -1,4 +1,5 @@
 {
   "mil3.5.4:0.1": "Questions of Milinda ",
-  "mil3.5.4:0.2": "Buddha Chapter "
+  "mil3.5.4:0.2": "Buddha Chapter ",
+  "mil3.5.4:0.3": "Question on Seeing the Dhamma "
 }
