--- a/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
@@ -3,5 +3,6 @@
   "mil3.5.5:0.2": "Buddha Chapter ",
   "mil3.5.5:0.3": "Question on Reconnecting and Not Transmigrating ",
   "mil3.5.5:1.1": "The king asked: ",
+  "mil3.5.5:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.5:4.1": "Question on Reconnecting and Not Transmigrating fifth "
 }
