--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -3,6 +3,7 @@
   "mil3.5.1:0.2": "Buddha Chapter ",
   "mil3.5.1:0.3": "Question on the Existence or Non-existence of the Buddha ",
   "mil3.5.1:1.1": "The king asked: ",
+  "mil3.5.1:1.2": "“Venerable Nāgasena, have you seen the Buddha?” ",
   "mil3.5.1:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.1:3.1": "Question on the Existence or Non-existence of the Buddha first "
 }
