--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -6,6 +6,7 @@
   "mil3.5.1:1.2": "“Venerable Nāgasena, have you seen the Buddha?” ",
   "mil3.5.1:1.3": "“Certainly not, your majesty.” ",
   "mil3.5.1:1.5": "“Certainly not, your majesty.” ",
+  "mil3.5.1:1.8": "“Certainly not, venerable sir.” ",
   "mil3.5.1:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.1:3.1": "Question on the Existence or Non-existence of the Buddha first "
 }
