--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -5,6 +5,7 @@
   "mil3.5.1:1.1": "The king asked: ",
   "mil3.5.1:1.2": "“Venerable Nāgasena, have you seen the Buddha?” ",
   "mil3.5.1:1.3": "“Certainly not, your majesty.” ",
+  "mil3.5.1:1.4": "“Then, have your teachers seen the Buddha?” ",
   "mil3.5.1:1.5": "“Certainly not, your majesty.” ",
   "mil3.5.1:1.8": "“Certainly not, venerable sir.” ",
   "mil3.5.1:1.10": "“Certainly not, venerable sir.” ",
