--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -7,6 +7,7 @@
   "mil3.5.1:1.3": "“Certainly not, your majesty.” ",
   "mil3.5.1:1.4": "“Then, have your teachers seen the Buddha?” ",
   "mil3.5.1:1.5": "“Certainly not, your majesty.” ",
+  "mil3.5.1:1.6": "“Because of this, venerable Nāgasena, there is no Buddha.” ",
   "mil3.5.1:1.8": "“Certainly not, venerable sir.” ",
   "mil3.5.1:1.10": "“Certainly not, venerable sir.” ",
   "mil3.5.1:2.1": "“You are clever, venerable Nāgasena.” ",
