--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -10,6 +10,7 @@
   "mil3.5.1:1.6": "“Because of this, venerable Nāgasena, there is no Buddha.” ",
   "mil3.5.1:1.7": "“Well then, your majesty, have seen the River Ūhā in the Himalayas?” ",
   "mil3.5.1:1.8": "“Certainly not, venerable sir.” ",
+  "mil3.5.1:1.9": "“Then has your father seen the River Ūhā?” ",
   "mil3.5.1:1.10": "“Certainly not, venerable sir.” ",
   "mil3.5.1:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.1:3.1": "Question on the Existence or Non-existence of the Buddha first "
