--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -14,6 +14,7 @@
   "mil3.5.1:1.10": "“Certainly not, venerable sir.” ",
   "mil3.5.1:1.11": "“Because of this, your majesty, there is no River Ūhā.” ",
   "mil3.5.1:1.12": "“There is, venerable sir. Even though the River Ūhā has not been seen by me nor by my father, there is a River Ūhā.” ",
+  "mil3.5.1:1.13": "“In the same way, your majesty, even though the Blessed One has not been seen by me nor by my teachers, there is a Blessed One.” ",
   "mil3.5.1:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.1:3.1": "Question on the Existence or Non-existence of the Buddha first "
 }
