Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.1_translation-en-kelly.json
@@ -8,7 +8,7 @@
   "mil3.5.1:1.4": "“Then, have your teachers seen the Buddha?” ",
   "mil3.5.1:1.5": "“Certainly not, your majesty.” ",
   "mil3.5.1:1.6": "“Because of this, venerable Nāgasena, there is no Buddha.” ",
-  "mil3.5.1:1.7": "“Well then, your majesty, have seen the River Ūhā in the Himalayas?” ",
+  "mil3.5.1:1.7": "“Well then, your majesty, have you seen the River Ūhā in the Himalayas?” ",
   "mil3.5.1:1.8": "“Certainly not, venerable sir.” ",
   "mil3.5.1:1.9": "“Then has your father seen the River Ūhā?” ",
   "mil3.5.1:1.10": "“Certainly not, venerable sir.” ",
