--- a/translation/en/kelly/sutta/kn/mil/mil3.5.2_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.2_translation-en-kelly.json
@@ -5,6 +5,7 @@
   "mil3.5.2:1.1": "The king asked: ",
   "mil3.5.2:1.2": "“Venerable Nāgasena, is the Buddha unsurpassed?” ",
   "mil3.5.2:1.3": "“Yes, your majesty, the Blessed One is unsurpassed.” ",
+  "mil3.5.2:1.4": "“How, venerable Nāgasena, do you know the Buddha is unsurpassed if you haven’t seen him before?” ",
   "mil3.5.2:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.2:3.1": "Question on the Unsurpassed Nature of the Buddha second "
 }
