--- a/translation/en/kelly/sutta/kn/mil/mil3.5.2_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.2_translation-en-kelly.json
@@ -8,6 +8,7 @@
   "mil3.5.2:1.4": "“How, venerable Nāgasena, do you know the Buddha is unsurpassed if you haven’t seen him before?” ",
   "mil3.5.2:1.5": "“What do you think, your majesty, would those who have not seen the great ocean before know that this great ocean is huge, deep, immeasurable, and unfathomable, such that as these five great rivers that flow into it constantly and continually, that is ",
   "mil3.5.2:1.6": "the Gaṅgā, the Yamunā, the Aciravatī, the Sarabhū, and the Mahī, neither the depletion nor filling up of it is discerned?” ",
+  "mil3.5.2:1.7": "“Yes, venerable sir, they would know.” ",
   "mil3.5.2:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.2:3.1": "Question on the Unsurpassed Nature of the Buddha second "
 }
