--- a/translation/en/kelly/sutta/kn/mil/mil3.5.3_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.3_translation-en-kelly.json
@@ -5,6 +5,7 @@
   "mil3.5.3:1.1": "The king asked: ",
   "mil3.5.3:1.2": "“Venerable Nāgasena, is it possible to know that the Buddha is unsurpassed?” ",
   "mil3.5.3:1.3": "“Yes, your majesty, it is possible to know that the Blessed One is unsurpassed.” ",
+  "mil3.5.3:1.4": "“How, venerable Nāgasena, is it possible to know that the Buddha is unsurpassed?” ",
   "mil3.5.3:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.3:3.1": "Question on Knowing the Unsurpassed Nature of the Buddha third "
 }
