--- a/translation/en/kelly/sutta/kn/mil/mil3.5.3_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.3_translation-en-kelly.json
@@ -7,6 +7,7 @@
   "mil3.5.3:1.3": "“Yes, your majesty, it is possible to know that the Blessed One is unsurpassed.” ",
   "mil3.5.3:1.4": "“How, venerable Nāgasena, is it possible to know that the Buddha is unsurpassed?” ",
   "mil3.5.3:1.5": "“In the past, your majesty, an elder named Tissa was a teacher of writing and many years have passed since he passed away. How is it that he is still known?” ",
+  "mil3.5.3:1.6": "“By his writing, venerable sir.” ",
   "mil3.5.3:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.3:3.1": "Question on Knowing the Unsurpassed Nature of the Buddha third "
 }
