--- a/translation/en/kelly/sutta/kn/mil/mil3.5.4_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.4_translation-en-kelly.json
@@ -3,6 +3,7 @@
   "mil3.5.4:0.2": "Buddha Chapter ",
   "mil3.5.4:0.3": "Question on Seeing the Dhamma ",
   "mil3.5.4:1.1": "The king asked: ",
+  "mil3.5.4:1.2": "“Venerable Nāgasena, have you seen the Dhamma?” ",
   "mil3.5.4:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.4:3.1": "Question on Seeing the Dhamma fourth "
 }
