--- a/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
@@ -3,6 +3,7 @@
   "mil3.5.5:0.2": "Buddha Chapter ",
   "mil3.5.5:0.3": "Question on Reconnecting and Not Transmigrating ",
   "mil3.5.5:1.1": "The king asked: ",
+  "mil3.5.5:1.2": "“Venerable Nāgasena, is it so that one does not transmigrate and yet one reconnects?” ",
   "mil3.5.5:1.6": "“Certainly not, venerable sir.” ",
   "mil3.5.5:2.3": "“Yes, venerable sir.” ",
   "mil3.5.5:2.5": "“Certainly not, venerable sir.” ",
