Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
@@ -6,6 +6,7 @@
   "mil3.5.5:1.2": "“Venerable Nāgasena, is it so that one does not transmigrate and yet one reconnects?” ",
   "mil3.5.5:1.3": "“Yes, your majesty, one does not transmigrate and yet one reconnects.” ",
   "mil3.5.5:1.4": "“How, venerable Nāgasena, is it that one does not transmigrate and yet one reconnects? Please give me an analogy.” ",
+  "mil3.5.5:1.5": "“Just as, your majesty, if a person kindled one lamp from another would that lamp have transmigrated from the other lamp?” ",
   "mil3.5.5:1.6": "“Certainly not, venerable sir.” ",
   "mil3.5.5:2.3": "“Yes, venerable sir.” ",
   "mil3.5.5:2.5": "“Certainly not, venerable sir.” ",
