Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
@@ -10,6 +10,7 @@
   "mil3.5.5:1.6": "“Certainly not, venerable sir.” ",
   "mil3.5.5:1.7": "“In the same way, your majesty, one does not transmigrate and yet one reconnects.” ",
   "mil3.5.5:2.1": "“Give me another analogy.” ",
+  "mil3.5.5:2.2": "“Do you remember, your majesty, learning some verse from your teacher of verses?” ",
   "mil3.5.5:2.3": "“Yes, venerable sir.” ",
   "mil3.5.5:2.5": "“Certainly not, venerable sir.” ",
   "mil3.5.5:3.1": "“You are clever, venerable Nāgasena.” ",
