Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.5_translation-en-kelly.json
@@ -12,6 +12,7 @@
   "mil3.5.5:2.1": "“Give me another analogy.” ",
   "mil3.5.5:2.2": "“Do you remember, your majesty, learning some verse from your teacher of verses?” ",
   "mil3.5.5:2.3": "“Yes, venerable sir.” ",
+  "mil3.5.5:2.4": "“Then, your majesty, has that verse transmigrated from the teacher?” ",
   "mil3.5.5:2.5": "“Certainly not, venerable sir.” ",
   "mil3.5.5:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.5:4.1": "Question on Reconnecting and Not Transmigrating fifth "
