Translations by sabbamitta to translation/de/site/interface_translation-de-site.json

--- a/translation/de/site/interface_translation-de-site.json
+++ b/translation/de/site/interface_translation-de-site.json
@@ -34,7 +34,7 @@
   "dictionary:plain": "Nur Übersetzung ",
   "dictionary:reference": "Quellenangaben ",
   "dictionary:referenceDescription": "„Primäre“ zeigt SuttaCentrals primäre Referenzen für segmentierte Texte und alle Referenzen für andere Texte. Verbleibende Elemente sind zusätzliche Paliausgaben. ",
-  "dictionary:referenceDisplayTypeBj": "Buddhajayantī  ",
+  "dictionary:referenceDisplayTypeBj": "Phratraipiṭakapāḷi 2501–2512 ",
   "dictionary:referenceDisplayTypeCck": "Chulachomklao 2436 ",
   "dictionary:referenceDisplayTypeKm": "Phratraipiṭakapāḷi 2501–2512 ",
   "dictionary:referenceDisplayTypeLv": "Lāvaraṭṭhassa 2500 ",
