--- a/translation/de/sabbamitta/sutta/an/an5/an5.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.44_translation-de-sabbamitta.json
@@ -50,7 +50,7 @@
   "an5.44:12.1": "„Wer das Angenehme gibt, bekommt das Angenehme, ",
   "an5.44:12.2": "wer das Vorderste gibt, bekommt das Vorderste, ",
   "an5.44:12.3": "wer das Vortreffliche gibt, bekommt das Vortreffliche, ",
-  "an5.44:12.4": "wer das Erste gibt, bekommt das Erste. ",
+  "an5.44:12.4": "wer das Beste gibt, bekommt das Beste. ",
   "an5.44:13.1": "Wer das Beste gibt, ",
   "an5.44:13.2": "das Vortreffliche, das Erste, ",
   "an5.44:13.3": "hat ein langes Leben und Ruhm, ",
