Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn39_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn39_translation-de-sabbamitta.json
@@ -82,7 +82,7 @@
   "mn39:14.4": "Wenn er daran dächte, ",
   "mn39:14.7": "wäre er voller Freude und Glück. ",
   "mn39:14.8": "Wie ein Mensch, der mitgenommen, leidend, schwer krank wäre. Er verlöre den Appetit und käme von Kräften. ",
-  "mn39:14.9": "Doch nach einiger Zeit erholte sie sich von dieser Krankheit, hätte wieder Appetit und käme zu Kräften. ",
+  "mn39:14.9": "Doch nach einiger Zeit erholte sie sich von dieser Krankheit, bekäme wieder Appetit und käme zu Kräften. ",
   "mn39:14.10": "Wenn er daran dächte, ",
   "mn39:14.12": "wäre er voller Freude und Glück. ",
   "mn39:14.13": "Wie ein Mensch, der in einem Gefängnis eingesperrt wäre. ",
