Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
@@ -58,7 +58,7 @@
   "mn51:5.16": "gefällt meinem Geist.“ ",
   "mn51:6.1": "„Aber warum gefallen diese drei Menschen deinem Geist nicht?“ ",
   "mn51:6.2": "„Herr, der Mensch, der sich selbst kasteit, tut das, obwohl er Glück will und vor Schmerz zurückschreckt. ",
-  "mn51:6.3": "Darum gefüllt dieser Mensch meinem Geist nicht. ",
+  "mn51:6.3": "Darum gefällt dieser Mensch meinem Geist nicht. ",
   "mn51:6.4": "Der Mensch, der andere kasteit, tut das, obwohl andere Glück wollen und vor Schmerz zurückschrecken. ",
   "mn51:6.5": "Darum gefüllt dieser Mensch meinem Geist nicht. ",
   "mn51:6.6": "Der Mensch, der sich selbst und andere kasteit, tut das, obwohl er selbst und auch andere Glück wollen und vor Schmerz zurückschrecken. ",
