--- a/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
@@ -64,7 +64,7 @@
   "mn51:6.6": "Der Mensch, der sich selbst und andere kasteit, tut das, obwohl er selbst und auch andere Glück wollen und vor Schmerz zurückschrecken. ",
   "mn51:6.7": "Darum gefällt dieser Mensch meinem Geist nicht. ",
   "mn51:6.8": "Der Mensch, der weder sich selbst noch andere kasteit, der in diesem Leben ohne Wünsche lebt, erloschen, kühl geworden, voller Seligkeit, mit göttlich gewordenem Selbst, quält weder sich noch andere, die alle Glück wollen und vor Schmerz zurückschrecken. ",
-  "mn51:6.10": "Darum gefüllt dieser Mensch meinem Geist. ",
+  "mn51:6.10": "Darum gefällt dieser Mensch meinem Geist. ",
   "mn51:6.11": "Nun, Herr, jetzt muss ich gehen. ",
   "mn51:6.12": "Ich habe viele Pflichten und Verantwortlichkeiten.“ ",
   "mn51:6.13": "„Bitte, Pessa, geh nach deinem Belieben.“ ",
