Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -85,7 +85,7 @@
   "mn60:15.5": "Man kann erwarten, dass sie gutes Verhalten mit dem Körper, der Sprache und dem Geist verwerfen und schlechtes Verhalten mit dem Körper, der Sprache und dem Geist aufnehmen und befolgen. ",
   "mn60:15.6": "Und warum? ",
   "mn60:15.7": "Weil diese Asketen und Brahmanen nicht die nachteiligen Folgen untauglicher Eigenschaften sehen, die so schmutzig und unlauter sind, und die vorteilhaften Folgen tauglicher Eigenschaften, die läuternde Kraft der Entsagung. ",
-  "mn60:16.1": "Und da es tatsächlich eine Wirkung von Taten gibt, ist darüber hinaus ihre Ansicht, es gebe keine Wirkung von Taten, eine falsche Ansicht. ",
+  "mn60:16.1": "Und da es eine Wirkung von Taten tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe keine Wirkung von Taten, eine falsche Ansicht. ",
   "mn60:16.2": "Da es tatsächlich eine Wirkung von Taten gibt, ist ihr Denken, es gebe keine Wirkung von Taten, falsches Denken. ",
   "mn60:16.3": "Da es tatsächlich eine Wirkung von Taten gibt, ist ihre Rede, es gebe keine Wirkung von Taten, falsche Rede. ",
   "mn60:16.4": "Da es tatsächlich eine Wirkung von Taten gibt, widersprechen sie, wenn sie sagen, es gebe keine Wirkung von Taten, jenen Vollendeten, die lehren, dass es eine Wirkung von Taten gibt. ",
