--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -86,7 +86,7 @@
   "mn60:15.6": "Und warum? ",
   "mn60:15.7": "Weil diese Asketen und Brahmanen nicht die nachteiligen Folgen untauglicher Eigenschaften sehen, die so schmutzig und unlauter sind, und die vorteilhaften Folgen tauglicher Eigenschaften, die läuternde Kraft der Entsagung. ",
   "mn60:16.1": "Und da es eine Wirkung von Taten tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe keine Wirkung von Taten, eine falsche Ansicht. ",
-  "mn60:16.2": "Da es tatsächlich eine Wirkung von Taten gibt, ist ihr Denken, es gebe keine Wirkung von Taten, falsches Denken. ",
+  "mn60:16.2": "Da es eine Wirkung von Taten tatsächlich gibt, ist ihr Denken, es gebe keine Wirkung von Taten, falsches Denken. ",
   "mn60:16.3": "Da es tatsächlich eine Wirkung von Taten gibt, ist ihre Rede, es gebe keine Wirkung von Taten, falsche Rede. ",
   "mn60:16.4": "Da es tatsächlich eine Wirkung von Taten gibt, widersprechen sie, wenn sie sagen, es gebe keine Wirkung von Taten, jenen Vollendeten, die lehren, dass es eine Wirkung von Taten gibt. ",
   "mn60:16.5": "Da es tatsächlich eine Wirkung von Taten gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe keine Wirkung von Taten, davon, eine unwahre Lehre anzunehmen. ",
