Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -89,7 +89,7 @@
   "mn60:16.2": "Da es eine Wirkung von Taten tatsächlich gibt, ist ihr Denken, es gebe keine Wirkung von Taten, falsches Denken. ",
   "mn60:16.3": "Da es eine Wirkung von Taten tatsächlich gibt, ist ihre Rede, es gebe keine Wirkung von Taten, falsche Rede. ",
   "mn60:16.4": "Da es eine Wirkung von Taten tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe keine Wirkung von Taten, jenen Vollendeten, die lehren, dass es eine Wirkung von Taten gibt. ",
-  "mn60:16.5": "Da es tatsächlich eine Wirkung von Taten gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe keine Wirkung von Taten, davon, eine unwahre Lehre anzunehmen. ",
+  "mn60:16.5": "Da es eine Wirkung von Taten tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe keine Wirkung von Taten, davon, eine unwahre Lehre anzunehmen. ",
   "mn60:16.6": "Und sie verherrlichen sich deshalb selbst und setzen andere herab. ",
   "mn60:16.7": "So geben sie ihr früheres sittliches Verhalten auf und sind in unmoralischem Verhalten verankert. ",
   "mn60:16.8": "Und so entstehen aufgrund von falscher Ansicht diese vielen schlechten, untauglichen Eigenschaften: falsche Ansicht, falsches Denken, falsche Rede, den Edlen widersprechen, andere überzeugen, unwahre Lehren anzunehmen, sowie sich selbst verherrlichen und andere herabsetzen. ",
