--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -107,7 +107,7 @@
   "mn60:18.7": "Und warum? ",
   "mn60:18.8": "Weil diese Asketen und Brahmanen die nachteiligen Folgen untauglicher Eigenschaften sehen, die so schmutzig und unlauter sind, und die vorteilhaften Folgen tauglicher Eigenschaften, die läuternde Kraft der Entsagung. ",
   "mn60:19.1": "Und da es eine Wirkung von Taten tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe eine Wirkung von Taten, rechte Ansicht. ",
-  "mn60:19.2": "Da es tatsächlich eine Wirkung von Taten gibt, ist ihr Denken, es gebe eine Wirkung von Taten, rechtes Denken. ",
+  "mn60:19.2": "Da es eine Wirkung von Taten tatsächlich gibt, ist ihr Denken, es gebe eine Wirkung von Taten, rechtes Denken. ",
   "mn60:19.3": "Da es tatsächlich eine Wirkung von Taten gibt, ist ihre Rede, es gebe eine Wirkung von Taten, rechte Rede. ",
   "mn60:19.4": "Da es tatsächlich eine Wirkung von Taten gibt, widersprechen sie, wenn sie sagen, es gebe eine Wirkung von Taten, nicht jenen Vollendeten, die lehren, dass es eine Wirkung von Taten gibt. ",
   "mn60:19.5": "Da es tatsächlich eine Wirkung von Taten gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe eine Wirkung von Taten, davon, eine wahre Lehre anzunehmen. ",
