Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -109,7 +109,7 @@
   "mn60:19.1": "Und da es eine Wirkung von Taten tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe eine Wirkung von Taten, rechte Ansicht. ",
   "mn60:19.2": "Da es eine Wirkung von Taten tatsächlich gibt, ist ihr Denken, es gebe eine Wirkung von Taten, rechtes Denken. ",
   "mn60:19.3": "Da es eine Wirkung von Taten tatsächlich gibt, ist ihre Rede, es gebe eine Wirkung von Taten, rechte Rede. ",
-  "mn60:19.4": "Da es tatsächlich eine Wirkung von Taten gibt, widersprechen sie, wenn sie sagen, es gebe eine Wirkung von Taten, nicht jenen Vollendeten, die lehren, dass es eine Wirkung von Taten gibt. ",
+  "mn60:19.4": "Da es eine Wirkung von Taten tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe eine Wirkung von Taten, nicht jenen Vollendeten, die lehren, dass es eine Wirkung von Taten gibt. ",
   "mn60:19.5": "Da es tatsächlich eine Wirkung von Taten gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe eine Wirkung von Taten, davon, eine wahre Lehre anzunehmen. ",
   "mn60:19.6": "Und sie verherrlichen sich deshalb nicht selbst, noch setzen sie andere herab. ",
   "mn60:19.7": "So geben sie ihr früheres unmoralisches Verhalten auf und sind in sittlichem Verhalten verankert. ",
