Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -130,5 +130,6 @@
   "mn82:19.9": "„Komm, lieber Raṭṭhapāla, lass uns ins Haus gehen.“ ",
   "mn82:19.10": "„Genug, Hausbesitzer. Mein Mahl für heute ist beendet.“ ",
   "mn82:19.11": "„Nun, Raṭṭhapāla, dann nimm bitte die morgige Mahlzeit von mir an.“ ",
-  "mn82:19.12": "Raṭṭhapāla schwieg zum Zeichen der Zustimmung. "
+  "mn82:19.12": "Raṭṭhapāla schwieg zum Zeichen der Zustimmung. ",
+  "mn82:20.1": "Da ging sein Vater, als er Raṭṭhapālas Zustimmung erkannt hatte, zu seinem eigenen Haus zurück. Er häufte Goldmünzen und ungemünztes Gold zu einem großen Haufen, den er hinter Schilfmatten versteckte. Dann wandte er sich an Raṭṭhapālas frühere Frauen: "
 }
