--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -131,5 +131,6 @@
   "mn82:19.10": "„Genug, Hausbesitzer. Mein Mahl für heute ist beendet.“ ",
   "mn82:19.11": "„Nun, Raṭṭhapāla, dann nimm bitte die morgige Mahlzeit von mir an.“ ",
   "mn82:19.12": "Raṭṭhapāla schwieg zum Zeichen der Zustimmung. ",
-  "mn82:20.1": "Da ging sein Vater, als er Raṭṭhapālas Zustimmung erkannt hatte, zurück zu seinem eigenen Haus. Er häufte Goldmünzen und ungemünztes Gold zu einem großen Haufen, den er hinter Schilfmatten versteckte. Dann wandte er sich an Raṭṭhapālas frühere Frauen: "
+  "mn82:20.1": "Da ging sein Vater, als er Raṭṭhapālas Zustimmung erkannt hatte, zurück zu seinem eigenen Haus. Er häufte Goldmünzen und ungemünztes Gold zu einem großen Haufen, den er hinter Schilfmatten versteckte. Dann wandte er sich an Raṭṭhapālas frühere Frauen: ",
+  "mn82:20.2": "„Bitte, Schwiegertöchter, schmückt euch so, wie unser Sohn Raṭṭhapāla euch früher am liebsten mochte.“ "
 }
