--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -1,3 +1,4 @@
 {
-  "mn5:0.1": "Discours de Longueur Moyenne 5 "
+  "mn5:0.1": "Discours de Longueur Moyenne 5 ",
+  "mn5:0.2": "Sans souillure "
 }
