--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -1,4 +1,5 @@
 {
   "mn5:0.1": "Discours de Longueur Moyenne 5 ",
-  "mn5:0.2": "Sans souillure "
+  "mn5:0.2": "Sans souillure ",
+  "mn5:1.1": "Ainsi ai-je entendu. "
 }
