--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -1,5 +1,6 @@
 {
   "mn5:0.1": "Discours de Longueur Moyenne 5 ",
   "mn5:0.2": "Sans souillure ",
-  "mn5:1.1": "Ainsi ai-je entendu. "
+  "mn5:1.1": "Ainsi ai-je entendu. ",
+  "mn5:1.2": "À une époque, le Bouddha séjournait près de Sāvatthī dans la Forêt de Jeta, au monastère d’Anāthapiṇḍika. "
 }
