Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -3,5 +3,6 @@
   "mn5:0.2": "Sans souillure ",
   "mn5:1.1": "Ainsi ai-je entendu. ",
   "mn5:1.2": "À une époque, le Bouddha séjournait près de Sāvatthī dans la Forêt de Jeta, au monastère d’Anāthapiṇḍika. ",
-  "mn5:1.3": "Là, Sāriputta s’adressa aux monastiques : "
+  "mn5:1.3": "Là, Sāriputta s’adressa aux monastiques : ",
+  "mn5:1.4": "« Vénérables, monastiques ! » "
 }
