--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -5,5 +5,6 @@
   "mn5:1.2": "À une époque, le Bouddha séjournait près de Sāvatthī dans la Forêt de Jeta, au monastère d’Anāthapiṇḍika. ",
   "mn5:1.3": "Là, Sāriputta s’adressa aux monastiques : ",
   "mn5:1.4": "« Vénérables, monastiques ! » ",
-  "mn5:1.5": "« Vénérable », répondirent-ils. "
+  "mn5:1.5": "« Vénérable », répondirent-ils. ",
+  "mn5:1.6": "Sāriputta déclara ceci : "
 }
