--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -6,5 +6,6 @@
   "mn5:1.3": "Là, Sāriputta s’adressa aux monastiques : ",
   "mn5:1.4": "« Vénérables, monastiques ! » ",
   "mn5:1.5": "« Vénérable », répondirent-ils. ",
-  "mn5:1.6": "Sāriputta déclara ceci : "
+  "mn5:1.6": "Sāriputta déclara ceci : ",
+  "mn5:2.1": "« Monastiques, il y a ces quatre personnes dans le monde. "
 }
