Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -11,6 +11,6 @@
   "mn5:2.2": "Lesquelles ? ",
   "mn5:2.3": "Une personne avec une souillure qui ne comprend pas véritablement : ‹ il y a une souillure en moi. › ",
   "mn5:2.4": "Mais, une autre personne avec une souillure qui comprend véritablement : ‹ il y a une souillure en moi. › ",
-  "mn5:2.5": "Une personne sans souillure qui ne comprend pas véritablement : ‹ il n’y a pas de souillure en moi. › ",
+  "mn5:2.5": "Mais, une autre personne sans souillure qui comprend véritablement : ‹ il n’y a aucune souillure en moi. › ",
   "mn5:2.6": "Mais une autre personne sans souillure qui comprend véritablement : ‹ il n’y a pas de souillure en moi. › "
 }
