Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -13,5 +13,6 @@
   "mn5:2.4": "Mais, une autre personne avec une souillure qui comprend véritablement : ‹ il y a une souillure en moi. › ",
   "mn5:2.5": "Une personne sans souillure qui ne comprend pas véritablement : ‹ il n’y a pas de souillure en moi. › ",
   "mn5:2.6": "Mais, une autre personne sans souillure qui comprend véritablement : ‹ il n’y a pas de souillure en moi. › ",
-  "mn5:2.7": "Dans ce cas, parmi les deux personnes avec une souillure, celle qui ne comprend pas est considérée comme pire, "
+  "mn5:2.7": "Dans ce cas, parmi les deux personnes avec une souillure, celle qui ne comprend pas est considérée comme pire, ",
+  "mn5:2.8": "tandis que celle qui comprend est considérée comme meilleure. "
 }
