Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -15,5 +15,6 @@
   "mn5:2.6": "Mais, une autre personne sans souillure qui comprend véritablement : ‹ il n’y a pas de souillure en moi. › ",
   "mn5:2.7": "Dans ce cas, parmi les deux personnes avec une souillure, celle qui ne comprend pas est considérée comme pire, ",
   "mn5:2.8": "tandis que celle qui comprend est considérée comme meilleure. ",
-  "mn5:2.9": "Et parmi les deux personnes sans souillure, celle qui ne comprend pas est considérée comme pire, "
+  "mn5:2.9": "Et parmi les deux personnes sans souillure, celle qui ne comprend pas est considérée comme pire, ",
+  "mn5:2.10": "tandis que celle qui comprend est considérée comme meilleure. » "
 }
