Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -20,7 +20,7 @@
   "mn5:3.1": "Lorsqu’il eut dit cela, le Vénérable Mahāmoggallāna lui dit : ",
   "mn5:3.2": "« Quelle est la cause, Révérend Sāriputta, quelle est la raison pour laquelle, parmi les deux personnes avec une souillure, l’une est considérée comme pire et l’autre meilleure ? ",
   "mn5:3.3": "Et quelle est la cause, quelle est la raison pour laquelle, parmi les deux personnes sans souillure, l’une est considérée comme pire et l’autre meilleure ? » ",
-  "mn5:4.1": "« Vénérables, considérez le cas de la personne qui a une souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’elle ne génère pas d’enthousiasme, ne fasse pas d’effort, ni ne stimule son énergie pour abandonner cette souillure. ",
+  "mn5:4.1": "« Révérends, considérez le cas de la personne qui a une souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’elle ne génère pas d’enthousiasme, ne fasse pas d’effort, ni ne stimule son énergie pour abandonner cette souillure. ",
   "mn5:4.2": "Et elle mourra avec l’avidité, la haine et l’illusion, entachée, avec un esprit corrompu. ",
   "mn5:4.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
   "mn5:4.4": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
