Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -25,5 +25,5 @@
   "mn5:4.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
   "mn5:4.4": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge couvert de saleté ou de taches. ",
   "mn5:4.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas encore plus sale et taché ? » ",
-  "mn5:4.6": "« Oui, vénérable. » "
+  "mn5:4.6": "« Oui, révérend. » "
 }
