Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -30,5 +30,6 @@
   "mn5:4.8": "elle meure avec un esprit corrompu. ",
   "mn5:5.1": "Considérez le cas de la personne qui a une souillure et le comprend. Vous pouvez vous attendre à ce qu’elle génère de l’enthousiasme, fasse des efforts et stimule son énergie pour abandonner cette souillure. ",
   "mn5:5.2": "Et elle mourra sans avidité, haine, illusion ou tache, avec un esprit pur. ",
-  "mn5:5.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. "
+  "mn5:5.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
+  "mn5:5.4": "Mais que les propriétaires l’utilisent et le nettoient, et ne le gardent pas dans un endroit sale. "
 }
