Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -33,5 +33,6 @@
   "mn5:5.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
   "mn5:5.4": "Mais que les propriétaires l’utilisent et le nettoient, et ne le gardent pas dans un endroit sale. ",
   "mn5:5.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas plus propre et plus brillant ? » ",
-  "mn5:5.6": "« Oui, révérend. » "
+  "mn5:5.6": "« Oui, révérend. » ",
+  "mn5:5.7": "« De la même manière, considérez le cas de la personne qui a une souillure et le comprend. Vous pouvez vous attendre à ce qu’… "
 }
