Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -35,5 +35,6 @@
   "mn5:5.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas plus propre et plus brillant ? » ",
   "mn5:5.6": "« Oui, révérend. » ",
   "mn5:5.7": "« De la même manière, considérez le cas de la personne qui a une souillure et le comprend. Vous pouvez vous attendre à ce qu’… ",
-  "mn5:5.8": "elle meure avec un esprit pur. "
+  "mn5:5.8": "elle meure avec un esprit pur. ",
+  "mn5:6.1": "Considérez le cas de la personne qui n’a pas de souillure, mais ne le comprend pas. Vous pouvez vous attendre à ce qu’elle se concentre sur la caractéristique de la beauté, et à cause de cela, la convoitise infectera son esprit. "
 }
